Fix tooltip visibility

--- a/wp-content/plugins/wacara/assets/scss/components/_tooltip.scss
+++ b/wp-content/plugins/wacara/assets/scss/components/_tooltip.scss
@@ -12,10 +12,9 @@ $tooltip_width: 150px;
     text-align: center;
     padding: 10px;
     position: absolute;
-    z-index: 1;
+    z-index: -1;
     bottom: 120%;
-    //left: 100%;
-    //margin-left: $tooltip_width/2*-1;
+    line-height: 1.3;
     margin-left: -63px;
     font-size: 12px;
     @include transition(all .2s ease);
@@ -46,11 +45,14 @@ $tooltip_width: 150px;
     margin-left: 5px;
     border: 1px solid darken($white, 80%);
     @include border-radius(50%);
+  }
 
-    &:hover {
-      .wcr-tooltip-text {
-        opacity: 1;
-      }
+  &:hover,
+  &:active,
+  &:focus {
+    .wcr-tooltip-text {
+      opacity: 1;
+      z-index: 1;
     }
   }
 }
